# test-Agent

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt
docs/superpowers/plans/: 2026-04-24-graphic-design-multi-agent-mvp.md  2026-05-08-issue-type-aware-prompts.md  2026-05-08-jira-ticket-qa-agent.md  2026-05-08-pr-auto-detection.md
docs/superpowers/specs/: .env.example  2026-04-23-mcp-test-harness-design.md  2026-04-24-graphic-design-multi-agent-design.md  2026-05-08-issue-type-aware-prompts-design.md  2026-05-08-pr-auto-detection-design.md  jira_qa_agent-readme.txt  mcp_use_basic_part_1.py  readme.txt  requirements.txt
graphic_studio/: README.md  pyproject.toml
graphic_studio/graphic_studio/: store.py
graphic_studio/graphic_studio/agents/: __init__.py  bus.py  messages.py  planner.py  workers.py
graphic_studio/graphic_studio/api/: main.py
graphic_studio/tests/: test_api.py  test_messages.py  test_planner.py  test_store.py
jira_qa_agent/: __init__.py  __main__.py  adf.py  analyze.py  bitbucket_pr.py  cli.py  config.py  jira_client.py
log/: pytest_configs.json
tests/: test_analyze.py  test_bitbucket_pr.py  test_cli_discovery.py
